<resources>
    <string name="app_name">蓝智管家</string>

    <string name="order_info">感谢您对我们的支持，请于12月28日购买</string>

    <string name="user_type">普通会员</string>

    <string name="menu_1">首页</string>
    <string name="menu_2">促销</string>
    <string name="menu_3">圈子</string>
    <string name="menu_4">购物车</string>
    <string name="menu_5">我的</string>



    <string name="menu_index_1">吸油过滤器</string>
    <string name="menu_index_2">回油过滤器</string>
    <string name="menu_index_3">压力管路过滤器</string>
    <string name="menu_index_4">其它</string>

    <string name="my_info">我的资料</string>
    <string name="my_order">我的订单</string>
    <string name="my_psw_modify">密码修改</string>
    <string name="my_user">我的账户</string>
    <string name="my_addr">收货地址</string>
    <string name="my_code">我的推广码</string>
    <string name="my_team">我的团队</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_complaint">投诉专区</string>
    <string name="my_setting">设置</string>


    <!--&lt;!&ndash; Strings related to login &ndash;&gt;
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->

    <string name="hint_login_user">用户名/手机号/邮箱</string>
    <string name="hint_login_psw">密码</string>
    <string name="hint_login_psw_ok">重新输入密码</string>
    <string name="hint_rgs_rephone">推荐人手机号（选填）</string>
    <string name="hint_rgs_fast">手机快速注册</string>
    <string name="hint_psw_forget">忘记密码？</string>
    <string name="hint_login_third">第三方登录</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_mobile_has">手机号已注册</string>
    <string name="hint_psw">请输入密码</string>
    <string name="hint_auth">填写验证码</string>
    <string name="hint_psw_rgt">请输入6-18位密码</string>
    <string name="hint_psw_sure">请再次输入位密码</string>


    <string name="err_login">登录失败</string>
    <string name="err_rgs">注册失败</string>
    <string name="err_login_cancle">取消登录</string>
    <string name="net_err">网络异常</string>
    <string name="err_net">网络异常</string>
    <string name="err_null_user">@string/hint_mobile</string>
    <string name="err_null_psw">@string/hint_psw</string>
    <string name="err_psw">密码不可少于%1$1d位，当前%2$1d为</string>
    <string name="err_psw_sure">密码不相同，请重新输入</string>
    <string name="err_auth_sure">验证码不正确，请重新输入</string>
    <string name="err_sd">没有存储权限</string>

    <string name="recommend">推荐</string>
    <string name="second">秒</string>
    <string name="title">提示</string>
    <string name="install">安装</string>

    <string name="complete">完成</string>
    <string name="scan">扫描</string>
    <string name="cancle">取消</string>
    <string name="refer">提交</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="update">更新</string>
    <string name="collect">收藏</string>
    <string name="quit">退出</string>
    <string name="auth">验证码</string>
    <string name="auth_rec">接收验证码</string>
    <string name="auth_get">获取验证码</string>
    <string name="attention">关注</string>
    <string name="attention_re">推荐关注</string>
    <string name="all">全部</string>
    <string name="essential">精华</string>
    <string name="reboot">重置</string>
    <string name="price">价格</string>
    <string name="category">分类</string>
    <string name="brand">品牌</string>

    <string name="topic">帖子：</string>
    <string name="topic_re">回帖：</string>
    <string name="topic_send">发帖</string>
    <string name="topic_detail">帖子详情</string>
    <string name="topic_review_num">全部评论(%1$d)</string>
    <string name="topic_send_hint">亲,好的内容会提高成为精华帖的几率（必填）</string>
    <string name="topic_send_post">发送到圈子：</string>
    <string name="topic_post_select">（必选）</string>
    <string name="topic_send_post_select">请选择要发送到的圈子</string>



    <string name="categroy_hot">热销商品</string>
    <string name="add_ring">+更多圈子</string>
    <string name="price_desc">高-低</string>
    <string name="price_asc">低-高</string>

    <string name="goods_review">评论</string>
    <string name="goods_reviewnum">已有评论%1$d条，\t\t\t已有%2$d人购买</string>
    <string name="goods_params">库存（%1$s），\t\t\t型号（%2$s）</string>
    <string name="goods_vip">会员商品</string>
    <string name="goods_new">最新商品</string>
    <string name="goods_categroy">商品分类</string>
    <string name="modify_phone_info">你当前绑定的手机号：%1$s，更换手机号后下次可以使用新手机号登陆</string>
    <string name="modify_phone_next">下一步</string>
    <string name="modify_phone">更换手机号</string>
    <string name="modify_phone_bind">绑定手机</string>

    <string name="day">今天</string>
    <string name="yesterday">昨天</string>

    <!--对话框-->
    <string name="dialog_update_ok">马上更新</string>
    <string name="dialog_update_cancle">以后再说</string>
    <string name="check_update">检测更新</string>
    <string name="update_version_curr">当前版本：</string>
    <string name="update_version_new">已经是最新版本！</string>
    <string name="update_version_progress">更新进度：</string>
    <string name="update_version_ignore">忽略该版</string>
    <string name="quit_msg">你是否退出</string>


    <string name="menu_device_1">我的设备</string>
    <string name="menu_device_2">设备列表</string>
    <string name="menu_device_3">绑定设备</string>
    <string name="hot_activity">热门推广</string>
    <string name="goods">商品</string>
    <string name="goods_sales">促销</string>
    <string name="repair">报修</string>
    <string name="dev">设备</string>
    <string name="radio_repair_timer_now">商家接单后当天上门</string>
    <string name="radio_repair_timer">具体上门服务时间由商家接单后安排</string>
    <string name="server_money">上门服务费</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="repair_detail">维修详情</string>
    <string name="order_no">订单号：%1$s</string>
    <string name="order_status_1">维修中</string>
    <string name="info">个人信息</string>
    <string name="info_goods">产品信息</string>
    <string name="goods_desc">产品描述：%1$s \t %2$s</string>
    <string name="goods_type">产品类型：%1$s</string>
    <string name="goods_err_desc">问题描述：%1$s</string>
    <string name="goods_img_upload">图片上传</string>
    <string name="server_time">服务时间</string>
    <string name="goods_part_replace">%1$s需要更换配件</string>
    <string name="door_service_money">已支付上门服务费：¥%1$s</string>
    <string name="door_service_time">商家上门时间：%1$s年%2$s月%3$s日 %4$s \t%5$s:%6$s %7$s</string>
    <string name="contact_merchant">联系商家</string>
    <string name="merchant_toast">提醒商家</string>
    <string name="repair_ok_door">确认上门</string>
    <string name="goods_YRT">源日通产品</string>
    <string name="no">非</string>
    <string name="arranty_period">保修期</string>
    <string name="replace_part">需要替换配件</string>
    <string name="no_2">不</string>
    <string name="week_0">星期日</string>
    <string name="week_1">星期一</string>
    <string name="week_2">星期二</string>
    <string name="week_3">星期三</string>
    <string name="week_4">星期四</string>
    <string name="week_5">星期五</string>
    <string name="week_6">星期六</string>
    <string name="my_dev">我的设备</string>

</resources>
