<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_corners_w"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/edit_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:gravity="top"
            android:hint="@string/topic_send_hint"
            android:padding="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/divider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <com.common.myui.MyGridView
            android:id="@+id/grid_img_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="70dp"
            android:numColumns="auto_fit"
            android:layout_margin="10dp"

            android:listSelector="@color/transparent"
            android:cacheColorHint="@color/transparent"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"></com.common.myui.MyGridView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_corners_w"
        android:layout_margin="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txtColor_txt"
            android:text="@string/topic_send_post"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/txt_post_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/txtColor_txt"
            android:text=""
            />
        <TextView
            android:id="@+id/txt_post_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txtColor_txt"
            android:text="@string/topic_post_select"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/icon_right_gray"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_refer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangel_select"
        android:textColor="@color/white"
        android:text="@string/refer"
        android:gravity="center"/>

</LinearLayout>
