<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/transparent_50">
    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corners_w">
        <ImageView
            android:id="@+id/img_colse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_plus"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pading"
            android:text="@string/sex"/>

        <RadioGroup
            android:id="@+id/radiogroup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/txt_sex">
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pading"
                android:text="@string/male"
                android:button="@null"
                android:checked="true"
                android:textColor="@color/txtColor_txt"
                android:layout_marginLeft="16dp"
                android:drawableRight="@drawable/bg_check_2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/divider"
                android:layout_marginLeft="16dp"/>
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pading"
                android:text="@string/female"
                android:button="@null"
                android:textColor="@color/txtColor_txt"
                android:layout_marginLeft="16dp"
                android:drawableRight="@drawable/bg_check_2"/>
        </RadioGroup>


    </RelativeLayout>



</LinearLayout>
